--- a/www/views/login.hbs
+++ b/www/views/login.hbs
@@ -12,12 +12,12 @@
 <div id="target"></div><!-- text fields -->
 <form id="login">
 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textfield-demo">
-  <input class="mdl-textfield__input" type="text" id="id-email" name="email" value="nkayabasi@hascevher.com.tr"/>
-  <label class="mdl-textfield__label" for="sample1">Enter your email</label>
+  <input class="mdl-textfield__input" type="text" id="id-email" name="email" value="nkayabasi@hascevher.com.tr" placeholder="Enter your email" />
+  <label class="mdl-textfield__label" for="sample1"></label>
 </div>
 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textfield-demo">
-  <input class="mdl-textfield__input" type="password" id="id-password" name="password" value="123456"/>
-  <label class="mdl-textfield__label" for="sample2">Password</label>
+  <input class="mdl-textfield__input" type="password" id="id-password" name="password" value="123456" placeholder="Password" />
+  <label class="mdl-textfield__label" for="sample2"></label>
 </div>
 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--primary right" href="calendar.html">
 Login
